@@ -1,4 +1,4 @@
-dnl $Id: acinclude.m4,v 1.218.2.34 2003/12/12 05:20:24 sniper Exp $
+dnl $Id: acinclude.m4,v 1.218.2.35 2004/01/20 01:11:40 sniper Exp $
 dnl
 dnl This file contains local autoconf functions.
 
@@ -1656,7 +1656,6 @@ AC_DEFUN([PHP_SETUP_OPENSSL],[
     CPPFLAGS=$old_CPPFLAGS
 
     PHP_ADD_INCLUDE($OPENSSL_INCDIR)
-    PHP_ADD_LIBPATH($OPENSSL_LIBDIR, $1)
   
     PHP_CHECK_LIBRARY(crypto, CRYPTO_free, [
       PHP_ADD_LIBRARY(crypto,,$1)
@@ -1677,6 +1676,8 @@ AC_DEFUN([PHP_SETUP_OPENSSL],[
     ])
     LIBS=$old_LIBS
     PHP_ADD_LIBRARY(ssl,,$1)
+
+    PHP_ADD_LIBPATH($OPENSSL_LIBDIR, $1)
   fi
 
   dnl For apache 1.3.x static build
